[project]
name = "rio-stac"
description = "Create STAC Items from raster datasets."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "rasterio",
    "pystac>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests",
    "jsonschema>=3.0",
]
dev = [
    "pre-commit",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "pygments",
    "pdocs",
]

[project.urls]
Source = "https://github.com/developmentseed/rio-stac"
Documentation = "https://developmentseed.org/rio-stac/"

[project.entry-points."rasterio.rio_plugins"]
stac = "rio_stac.scripts.cli:stac"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rio_stac"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.isort]
profile = "black"
known_first_party = ["rio_stac"]
known_third_party = ["rasterio", "pystac"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
