[project]
name = "rio-stac"
description = "Create STAC Items from raster datasets."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "rasterio>=1.0,!=1.4.2",
    "pystac>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests",
    "pystac[validation]>=1.0.0,<2.0.0"
]
dev = [
    "pre-commit",
    "bump-my-version",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "pygments",
    "pdocs",
]

[project.urls]
Source = "https://github.com/developmentseed/rio-stac"
Documentation = "https://developmentseed.org/rio-stac/"

[project.entry-points."rasterio.rio_plugins"]
stac = "rio_stac.scripts.cli:stac"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rio_stac"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["rio_stac"]
known_third_party = ["rasterio", "pystac"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
    "B028",
    "C416",
]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.bumpversion]
current_version = "0.11.1"

search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "rio_stac/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
